# BemoCode

./: .env  .gitignore  pyproject.toml
.agent/sessions/Users-qiumengbo.123-Desktop-hello-agent-letsMakeCC-bemoCode/: 3943397f84ae.jsonl  70bd2f85253b.jsonl
src/bemocode/: __init__.py  agent.py  bash_runner.py  bg_manager.py  cli.py  compact_basic.py  cron_tools.py  diff_ui.py  file_history.py  fs_safety.py  hooks.py  interactive.py  model.py  permissions.py  project_memory.py  prompt_ui.py  runtime.py  scheduler.py  session.py  slash.py  startup.py  tools.py
src/bemocode/memdir/: __init__.py  paths.py  store.py  types.py
